# tika-python

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  pyproject.toml  requirements.txt  setup.py  tika-temp.py  tika.py
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  documentation.yml  test.yml
docs/source/: conf.py  index.rst  modules.rst  readme.rst  tika.rst  tika.tests.rst
lib/: log4j.properties
parser/: __init__.py
tests/: conftest.py  memory_benchmark.py  test_benchmark.py  test_bytefreq.py  test_config.py  test_detector.py  test_from_file_service.py  test_language.py  test_parser.py  test_pdf.py  test_prep.txt  test_tika.py  test_unpack.py  tests.py  tests_params.py  tests_unpack.py
tests/arguments/: test_unsupported.csv
tika/: __init__.py  bytefreq.py  config.py  detector.py  language.py  parser.py  pdf.py  tika.py  translate.py  unpack.py
tika/bytefreq/: README.md
tika/tests/: __init__.py  memory_benchmark.py  test_benchmark.py  test_from_file_service.py  test_ssl_link.py  test_tika.py  test_unpack.py  tests.py  tests_params.py  tests_unpack.py  utils.py
tika/tests/arguments/: test_remote_content.csv  test_remote_metadata.csv  test_unsupported.csv
tika/tests/files/: email_with_utf8chars_in_headers.eml  sample_email.eml
translate/: __init__.py
