[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools" ]

[project]
name = "tika"
description = "Apache Tika Python library"
readme = "README.md"
keywords = [ "tika", "digital", "babel fish", "apache" ]
license = "Apache-2.0"
authors = [ { name = "Chris Mattmann", email = "chris.mattmann@gmail.com" } ]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Database :: Front-Ends",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = [ "version" ]
dependencies = [
  "beautifulsoup4==4.13.3",
  "requests",
]

[dependency-groups]
tests = [
  "memory-profiler",
  "pytest>=9.0.3",
  "pytest-benchmark",
  "pytest-cov",
]
docs = [
  "furo>=2025.12.19",
  "myst-parser>=5.0",
  "sphinx>=9.1",
]

[project.urls]
homepage = "http://github.com/chrismattmann/tika-python"
repository = "http://github.com/chrismattmann/tika-python.git"

[project.scripts]
tika-python = "tika.tika:main"

[tool.setuptools]
packages.find.include = [
  "tika*",
]

[tool.setuptools.dynamic]
version = {attr = "tika.__version__"}

[tool.pytest]
minversion = "9.0"
addopts = [ "-ra", "--showlocals", "--strict-config", "--strict-markers" ]
log_level = "INFO"
xfail_strict = true
testpaths = [ "tests" ]

[tool.coverage]
run.source = [ "tika" ]
run.branch = true
report.skip_covered = true
report.show_missing = true
